--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -9,12 +9,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>D:\Entwicklung\Projekte\KeyLocker\Utility\documentation.xml</DocumentationFile>
+    <DocumentationFile>documentation.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DocumentationFile>D:\Entwicklung\Projekte\KeyLocker\Utility\documentation.xml</DocumentationFile>
+    <DocumentationFile>documentation.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
