--- a/CoreLib/CoreLib.csproj
+++ b/CoreLib/CoreLib.csproj
@@ -10,24 +10,16 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DocumentationFile>D:\Entwicklung\Projekte\KeyLocker\CoreLib\documentation.xml</DocumentationFile>
+    <DocumentationFile>documentation.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DocumentationFile>D:\Entwicklung\Projekte\KeyLocker\CoreLib\documentation.xml</DocumentationFile>
+    <DocumentationFile>documentation.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove=".editorconfig" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EditorConfigFiles Remove="D:\Entwicklung\Projekte\KeyLocker\CoreLib\.editorconfig" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EditorConfigFiles Remove="D:\Entwicklung\Projekte\KeyLocker\CoreLib\.editorconfig" />
   </ItemGroup>
 
   <ItemGroup>
