--- a/.editorconfig
+++ b/.editorconfig
@@ -59,7 +59,7 @@ dotnet_style_predefined_type_for_locals_parameters_members = true:warning
 dotnet_style_predefined_type_for_member_access = true:warning
 
 # Legt die Ordnung für Sichtbarkeits- und Zugriffsmodifikatoren fest
-csharp_preferred_modifier_order = public,private,internal,protected,readonly,static,abstract:warning
+csharp_preferred_modifier_order = public,private,internal,protected,static,readonly,abstract:warning
 
 #Pattern-Matching [variable is Type] wird bevorzugt.
 csharp_style_pattern_matching_over_as_with_null_check = true:warning
